Fix minor issue with border radius on truncated cards

--- a/assets/static/src/App.css
+++ b/assets/static/src/App.css
@@ -209,7 +209,7 @@ p {
   font-weight: bolder;
 }
 
-.card-image {
+.card {
   background: white;
   border-radius: 3%;
 }
